--- a/event.html
+++ b/event.html
@@ -38,7 +38,7 @@
     <nav class="navbar navbar-expand-lg mynav">
         <div class="container-fluid drama">
           <div class="logo">
-            <img src="./Drama club white.png" alt=">">
+            <!-- <img src="./Drama club white.png" alt=">"> -->
           </div>
           <a class="navbar-brand mx-3 mybrand text-uppercase"  href="#">GEC Drama Club</a>
           <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation" style="height:30px; width: 40px;font-size: 15px; padding:1px; background-color:rgba(14, 134, 40, 0.986);">
@@ -50,7 +50,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item mx-3">
-                    <a class="nav-link" href="magzine.html">Magzine</a>
+                    <a class="nav-link" href="magzine.html">Magazine</a>
                   </li>
               <li class="nav-item mx-3">
                 <a class="nav-link leak active" href="event.html">Events</a>
@@ -112,7 +112,7 @@
           <div class="mx-2 mb-3">
             <p>Drama CLub Council Inaugrual Event</p>
             <p></p>
-            <a href="#" download="">Download The Broshure</a>
+            <a href="#" download="">Download The Brochure</a>
           </div>
         </div>
         <div class="col-lg-12 mt-1">
@@ -120,11 +120,11 @@
           <div class="mx-2 mb-3 text-lg-end text-sm-center">
             <p>Drama CLub Council Inaugrual Event</p>
             <p>Drama Club Council Inaugural Ceremony was hosted on 16 December 2021 from 10:00AM at the Mining Department Seminar Hall. The inaugural ceremony started off with a Musical Performance by the GEC Music Club. The Lamp lighting ceremony took place at the hands of the honourable Chief Guest Shri Siddhesh. A report was delivered by Former General Secretary, Mr. Viddesh Padiyar that included previous years’ activities. We got the chance to hear a motivating and appreciative speech by Mr. Siddhesh Naik. The newly formed council members were Presented with badges and mementos to the outgoing council members. The results of short film competition titled “Astitva: Conspiracy Theories” organized by the Drama Club for the GEC Students were announced and followed by screening of winning short films. Magazine Secretary Mr. Srinidhi Bhat introduced the Drama Club e-magazine “Kala Tarang”. After the ceremony an interactive session was held for the participants of the short film competition with the judges Mr. Geetesh Gawas and Mr. Sainath Uskaikar.</p>
-            <a href="#" download="">Download The Broshure</a>
+            <a href="#" download="">Download The Brochure</a>
           </div>
           <div class="mx-2 mb-3 text-lg-end text-sm-center">
             <p>Event 2</p>
-            <a href="#" download="">Download The Broshure</a>
+            <a href="#" download="">Download The Brochure</a>
           </div>
         </div>
         </div>
