--- a/magzine.html
+++ b/magzine.html
@@ -18,7 +18,7 @@
             }
           }
         </style>
-    <title>Magzine</title>
+    <title>Magazine</title>
 </head>
 <body>
     <div class="wrapper">
@@ -29,7 +29,7 @@
         <nav class="navbar navbar-expand-lg mynav">
             <div class="container-fluid drama">
               <div class="logo">
-                <img src="./Drama club white.png" alt=">">
+                <!-- <img src="./Drama club white.png" alt=">"> -->
               </div>
               <a class="navbar-brand mybrand fw-bold text-uppercase"  href="./index.html">GEC Drama Club</a>
               <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation" style="height:30px; width: 40px;font-size: 15px; padding:1px; background-color:rgba(14, 134, 40, 0.986);">
@@ -41,7 +41,7 @@
                     <a class="nav-link " aria-current="page" href="index.html">Home</a>
                   </li>
                   <li class="nav-item mx-3">
-                    <a class="nav-link leak active" href="magzine.html">Magzine</a>
+                    <a class="nav-link leak active" href="magzine.html">Magazine</a>
                   </li>
                   <li class="nav-item mx-3">
                     <a class="nav-link" href="event.html">Events</a>
@@ -58,7 +58,7 @@
           </nav>
 
           <!-- magzine viewer -->
-          <div class="container d-flex justify-content-center pdf">
+          <div class="container mt-3 d-flex justify-content-center pdf">
             <embed src="./Kala Tarang.pdf#toolbar=0&navpanes=0&scrollbar=0" type="application/pdf" width="500px" height="600px"/>
             <!-- <object data="./Tarang.pdf" type="application/pdf" style="height: -webkit-fill-available;width: -webkit-fill-available"></object> -->
           </div>
