--- a/achievement.html
+++ b/achievement.html
@@ -39,7 +39,7 @@
     <nav class="navbar navbar-expand-lg mynav">
         <div class="container-fluid drama">
           <div class="logo">
-            <img src="./Drama club white.png" alt=">">
+            <!-- <img src="./Drama club white.png" alt=">"> -->
           </div>
           <a class="navbar-brand mx-3 mybrand text-uppercase"  href="./index.html">GEC Drama Club</a>
           <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation" style="height:30px; width: 40px;font-size: 15px; padding:1px; background-color:rgba(14, 134, 40, 0.986);">
@@ -51,7 +51,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item mx-3">
-                <a class="nav-link" href="magzine.html">Magzine</a>
+                <a class="nav-link" href="magzine.html">Magazine</a>
               </li>
               <li class="nav-item mx-3">
                 <a class="nav-link" href="event.html">Events</a>
