--- a/contact.html
+++ b/contact.html
@@ -81,7 +81,7 @@
     <nav class="navbar navbar-expand-lg mynav">
         <div class="container-fluid drama">
           <div class="logo">
-            <img src="./Drama club white.png" alt=">">
+            <!-- <img src="./Drama club white.png" alt=">"> -->
           </div>
           <a class="navbar-brand mx-3 mybrand text-uppercase"  href="#">GEC Drama Club</a>
           <button class="navbar-toggler navbar-dark" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation" style="height:30px; width: 40px;font-size: 15px; padding:1px; background-color:rgba(14, 134, 40, 0.986);">
@@ -93,7 +93,7 @@
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item mx-3">
-                <a class="nav-link" href="magzine.html">Magzine</a>
+                <a class="nav-link" href="magzine.html">Magazine</a>
               </li>
               <li class="nav-item mx-3">
                 <a class="nav-link" href="event.html">Events</a>
@@ -201,14 +201,14 @@
       </div>
     <div class="footer container-fluid p-2">
       <div class="text-light text-center "><i class="bi bi-people"></i> Follow Us On:</div><br>
-      <div class="d-flex align-items-center justify-content-around social mb-2">
-          <span class="mx-4"><i class="bi bi-instagram"></i> @gecdramaclub</span>
-          <span class="mx-4"><i class="bi bi-envelope"></i> gecdramaclub@gmail.com</span>
-          <span class="mx-4"><i class="bi bi-youtube"></i>  Gec Drama Club Farmagudi</span>
+      <div class="d-flex align-items-center justify-content-around social mb-2 container-fluid row">
+          <span class="mx-4 col-lg-3 col-12"><i class="bi bi-instagram"></i> @gecdramaclub</span>
+          <span class="mx-4 col-lg-3 col-12"><i class="bi bi-envelope"></i> gecdramaclub@gmail.com</span>
+          <span class="mx-4 col-lg-3 col-12"><i class="bi bi-youtube"></i>  Gec Drama Club Farmagudi</span>
       </div><br>
-      <p class="mt-2 mx-2" style="color: white;">Youtube Channel Link : <a href="https://www.youtube.com/channel/UCkYbrsW0dEKhtj8-vfzhHOA">Visit Now</a></p>
-      <div class="text-light mt-2 mb-2">
-        <p class="container-fluid text-start" style="font-size:18px;"><span>Created by: Avishkar Parab</span>  <span class="mx-4"><i class="bi bi-envelope"></i>  aviparab72733@gmail.com</span> </p>
+      <p class="mt-2 mx-2 container-fluid" style="color: white;">Youtube Channel Link : <a href="https://www.youtube.com/channel/UCkYbrsW0dEKhtj8-vfzhHOA">Visit Now</a></p>
+      <div class="container-fluid text-light mt-2 mb-2">
+        <p class="container-fluid text-start" style="font-size:18px;"><span>Created by: Avishkar Parab</span> <br><span class="mx-4 col-lg-6 col-12"><i class="bi bi-envelope"></i>  aviparab72733@gmail.com</span> </p>
       </div>
     </div>
 
